--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
       hibernate:
         dialect: ${HIBERNATE_DIALECT}
         hbm2ddl:
-          auto: validate
+          auto: none
         format_sql: true
         show_sql: true
     hibernate:
